--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=backend_spring_tp-3-4
+server.port=8082
+#DataBase Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+
+#keycloak Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri= http://localhost:8080/realms/myrealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= http://localhost:8080/realms/myrealm/protocol/openid-connect/certs
